<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.discaddy.NewPlayer">

    <EditText android:id="@+id/name_new_player"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/new_name"/>

    <EditText android:id="@+id/course_new_player"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:hint="@string/new_course"/>

    <EditText android:id="@+id/score_new_player"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:hint="@string/new_score"/>

    <EditText android:id="@+id/disk_new_player"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/new_disk"/>

    <Button android:id="@+id/submit_new_player"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/new_Submit"
        android:onClick="createNewPlayer"/>

</LinearLayout>