<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.discaddy.PlayerEdit">

    <EditText android:id="@+id/name_edit_player"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_name"/>

    <EditText android:id="@+id/course_edit_player"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:hint="@string/edit_course"/>

    <EditText android:id="@+id/score_edit_player"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="50dp"
        android:hint="@string/edit_score"/>

    <EditText android:id="@+id/disk_edit_player"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:hint="@string/edit_disk"/>

    <Button android:id="@+id/submit_edit_player"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/edit_Submit"
        android:onClick="updatePlayer"/>

</LinearLayout>
