<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Splash">

    <Button
        android:id="@+id/new_scorecard_button"
        android:text="@string/new_scorecard_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/recent_scorecards_button"
        android:text="@string/recent_scorecards_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/new_scorecard_button"/>

    <Button
        android:id="@+id/players_button"
        android:text="@string/players_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recent_scorecards_button"/>

    <Button
        android:id="@+id/find_a_course_button"
        android:text="@string/find_a_course_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/players_button"/>

    <Button
        android:id="@+id/discs_button"
        android:text="@string/discs_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/find_a_course_button"/>

    <Button
        android:id="@+id/report_found_disc_button"
        android:text="@string/report_found_disc_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/discs_button"/>
</RelativeLayout>
