<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:orientation="vertical"
    tools:context="com.discaddy.PlayerProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView android:id="@+id/player_image"
            android:contentDescription="@string/edit_image_description"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerInside"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/player_name"
            android:text="@string/player_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/player_fav_course"
            android:text="@string/player_fav_course"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/player_score"
            android:text="@string/player_score"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/player_fav_disk"
            android:text="@string/player_disk"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:textSize="15sp"/>
    </LinearLayout>
</ScrollView>